--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
-    <style>
+    <style>  
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
@@ -18,6 +18,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         max-width: 400px;
+
       }
     </style>
 
@@ -28,6 +29,8 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
     <script src="popup.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+
   </head>
   <body>
     <div id="status"></div>
